BE - feat(user-practice): enhance answer submission and feedback handling, add validation to request DTOs, and implement new response structure