@@ -1,8 +1,10 @@
 package com.nta.common.service;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public final class SentenceUtils {
 
@@ -14,15 +16,27 @@ public final class SentenceUtils {
      * Split paragraph into sentences.
      * Supports ., ?, ! endings.
      */
-    public static List<String> splitSentences(String paragraphContent) {
+    private static final Pattern SENTENCE_PATTERN =
+            Pattern.compile(".*?(?:[.!?](?:\\n+|\\s+)|,(?:\\n+)|$)", Pattern.DOTALL);
 
-        if (paragraphContent == null || paragraphContent.isBlank()) {
-            return List.of();
+    public static List<String> splitSentences(String text) {
+        if (text == null || text.isEmpty()) {
+            return Collections.emptyList();
         }
 
-        return Arrays.stream(paragraphContent.trim().split("(?<=[.!?])\\s+"))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+        // Normalize CRLF -> LF
+        String normalized = text.replace("\r\n", "\n");
+
+        Matcher matcher = SENTENCE_PATTERN.matcher(normalized);
+        List<String> result = new ArrayList<String>();
+
+        while (matcher.find()) {
+            String sentence = matcher.group().trim();
+            if (!sentence.isEmpty()) {
+                result.add(sentence);
+            }
+        }
+
+        return result;
     }
 }
